--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,17 @@ services:
       - MYSQL_DATABASE=${MYSQL_DATABASE:-wordpress}
     restart: always
 
+    
+  webp-server:
+    image: webpsh/webps:latest
+    restart: always
+    container_name: webp-server
+    volumes:
+      - ./webp-server/config.json:/etc/config.json
+      - ./wordpress:/var/www/html
+    ports:
+      - 3333:3333
+      
   nginx:
     image: nginx:${NGINX_VERSION:-latest}
     container_name: nginx
@@ -44,11 +55,5 @@ services:
     depends_on:
       - wordpress
     restart: always
-
-  adminer:
-    image: adminer
-    restart: always
     links:
-      - mysql
-    ports:
-      - 8080:8080
+      - webp-server
