--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -21,4 +21,8 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
+    
+    location ^~ /wp-content/uploads/ {
+        proxy_pass http://127.0.0.1:3333;
+    }
 }
