--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -23,6 +23,6 @@ server {
     }
     
     location ^~ /wp-content/uploads/ {
-        proxy_pass http://127.0.0.1:3333;
+        proxy_pass http://webp-server:3333;
     }
 }
